workspaces/liferay-learn-workspace/client-extensions/liferay-learn-global-css/assets/global.css
/* ... */
.pagination-bar {
	&,
	.dropdown-toggle,
	.pagination,
	.pagination-results {
		color: var(--color-action-neutral-default, #2b3a4b);
		display: flex;
		gap: var(--spacer-2);
		justify-content: space-between;
	}

	button,
	.page-link {
		color: var(--color-action-neutral-default);
		font-weight: var(--font-weight-normal) !important;
		letter-spacing: 0;
		margin: 0;

		&::before {
			display: none !important;
		}
	}

	.active.page-item .page-link,
	.page-link:hover {
		background-color: var(--color-action-neutral-hover-10);
	}
}

.search-bar-suggestions
	> .input-group-item
	> .input-group
	> .input-group-inset-item
	> .btn-unstyled
	> .lexicon-icon-search {
	color: var(--color-brand-primary, #0b5fff);
	height: 2rem;
	width: 2rem;
}

.search-capability {
	.input-group .input-group-inset-item-after {
		border-bottom-right-radius: 3rem;
		border-left-width: 0;
		border-top-right-radius: 3rem;
		width: 4.5rem;
	}

	.input-group-inset-after.form-control {
		border-bottom-left-radius: 3rem;
		border-right-color: transparent;
		border-top-left-radius: 3rem;
		font-size: var(--h5-font-size);
		padding: 1rem;
	}

	.lexicon-icon {
		color: var(--primary);
		fill: var(--primary);
		height: 2rem;
		width: 2rem;
	}

	.panel-body {
		padding: 0;
	}
}

.search-results {
	.search-results-entry {
		align-items: flex-start;
		display: flex;
		flex-direction: column;
		gap: 0.25rem;
	}

	.search-results-entry .search-results-entry-title {
		border-radius: 0.625rem;
		color: #0b5fff;
		font-size: 1rem;
		font-style: normal;
		font-weight: 600;
		line-height: 1.5rem;
		padding: 1rem;
	}

	.search-results-entry .search-results-entry-title .published-date {
		color: var(--color-state-neutral-darken-1, #6c6c75);
		font-size: 0.8125rem;
		font-style: normal;
		font-weight: 400;
		line-height: 1rem;
	}

	.search-results-entry
		.search-results-entry-title
		.search-results-entry-content {
		color: var(--color-neutral-10, #282934);
		font-size: 1rem;
		font-style: normal;
		font-weight: 400;
		line-height: 1.5rem;
	}

	.search-results-entry .search-results-entry-title:hover {
		background: var(--color-action-primary-hover-10, #edf3fe);
	}

	.solid {
		border-top: 1px solid var(--color-neutral-2, #e2e2e4);
	}
}

.t-paragraph-lg {
	font-size: var(--text-paragraph-lg-font-size);
}

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
	color: var(--info-l1);
}

.token.punctuation {
	color: var(--secondary);
}

.token.namespace {
	opacity: 0.7;
}

.token.property,
.token.tag,
.token.constant,
.token.symbol,
.token.deleted {
	color: var(--color-danger-l1, #f48989);
}

.token.boolean,
.token.number {
	color: var(--color-chart-3, #ad9ee9);
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
	color: var(--white);
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string,
.token.variable {
	color: var(--color-secondary-l1, #ffcb48);
}

.token.atrule,
.token.attr-value,
.token.function,
.token.class-name {
	color: var(--color-state-success-lighten-1, #9ad091);
}

.token.keyword {
	color: var(--color-primary-l3, #f0f5ff);
}

.token.regex,
.token.important {
	color: var(--color-chart-4, #fe8856);
}

.token.important,
.token.bold {
	font-weight: bold;
}
.token.italic {
	font-style: italic;
}

.token.entity {
	cursor: help;
}

